edit yamls for foreach task and dbsql serverless execution

--- a/databricks.yml
+++ b/databricks.yml
@@ -39,3 +39,8 @@ targets:
       # This runs as matthew.giglia@databricks.com in production. We could also use a service principal here,
       # see https://docs.databricks.com/dev-tools/bundles/permissions.html.
       user_name: matthew.giglia@databricks.com
+
+variables:
+  warehouse_id:
+    description: A Databricks SQL Warehouse ID to Use for SQL Notebooks or Files 
+    default: 475b94ddc7cd5211
