--- a/databricks.yml
+++ b/databricks.yml
@@ -17,6 +17,8 @@ targets:
     default: true
     workspace:
       host: https://e2-demo-field-eng.cloud.databricks.com
+    variables:  
+      warehouse_id: 475b94ddc7cd5211
 
   ## Optionally, there could be a 'staging' target here.
   ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/ci-cd.html.)
