--- a/databricks.yml
+++ b/databricks.yml
@@ -16,16 +16,16 @@ targets:
     mode: development
     default: true
     workspace:
-      host: https://e2-demo-field-eng.cloud.databricks.com
+      host: https://adb-3286402577411082.2.azuredatabricks.net/
     variables:  
-      warehouse_id: 475b94ddc7cd5211
+      warehouse_id: 5866794ff3870e1d
 
   ## Optionally, there could be a 'staging' target here.
   ## (See Databricks docs on CI/CD at https://docs.databricks.com/dev-tools/bundles/ci-cd.html.)
   #
   # staging:
   #   workspace:
-  #     host: https://e2-demo-field-eng.cloud.databricks.com
+  #     host: https://adb-3286402577411082.2.azuredatabricks.net/
 
   # The 'prod' target, used for production deployment.
   prod:
@@ -33,16 +33,16 @@ targets:
     # Doing so enables strict verification of the settings below.
     mode: production
     workspace:
-      host: https://e2-demo-field-eng.cloud.databricks.com
-      # We always use /Users/matthew.giglia@databricks.com for all resources to make sure we only have a single copy.
+      host: https://adb-3286402577411082.2.azuredatabricks.net/
+      # We always use /Users/goutham.sudini@molinahealthcarelab.onmicrosoft.com for all resources to make sure we only have a single copy.
       # If this path results in an error, please make sure you have a recent version of the CLI installed.
-      root_path: /Users/matthew.giglia@databricks.com/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Users/goutham.sudini@molinahealthcarelab.onmicrosoft.com/.bundle/${bundle.name}/${bundle.target}
     run_as:
-      # This runs as matthew.giglia@databricks.com in production. We could also use a service principal here,
+      # This runs as goutham.sudini@molinahealthcarelab.onmicrosoft.com in production. We could also use a service principal here,
       # see https://docs.databricks.com/dev-tools/bundles/permissions.html.
-      user_name: matthew.giglia@databricks.com
+      user_name: goutham.sudini@molinahealthcarelab.onmicrosoft.com
 
 variables:
   warehouse_id:
     description: A Databricks SQL Warehouse ID to Use for SQL Notebooks or Files 
-    default: 475b94ddc7cd5211
+    default: 5866794ff3870e1d
